# sign-pdf

./: LICENSE  README.md  app.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy-gh-pages.yml
sign_pdf/: app.py
sign_pdf/static/js/: script.js
sign_pdf/templates/: index.html
static/css/: style.css
static/js/: script.js
templates/: index.html
web/: index.html
web/static/js/: script.js
